@@ -14,13 +14,12 @@ import java.util.stream.Collectors;
 public class Library {
 
     private BookHandler bookHandler;
-    Date date = new Date();
 
     public Library() {
         this.bookHandler = new BookHandlerImpl();
     }
 
-    public void addBook(Book book) { // this method adds a book to the library
+    public void addBook(Book book) {
         if (!bookHandler.exists(book)) {
             bookHandler.saveBookInfo(book);
             System.out.println("Book added successfully");
@@ -29,15 +28,8 @@ public class Library {
         }
     }
 
-    public void borrowBook(Book book, Borrower borrower) { // this method borrows a book from the
-        // library and assigns it to the borrower
- /* 1. Musimy sprawdzić, czy dana książka jest dostępna, czyli czy status jest AVAILABLE
-    2. Jeżeli książka nie jest dostępna, to otrzymujemy błąd - the book is not available.
-    3. Jeżeli książka jest dostępna, to:
-        a) zmieniamy jej status na BORROWED w pliku Data Base - List of Books.txt
-        b) dodajemy tę książkę do listy wypożyczonych książek - lending.txt
-            - ustawiamy dzisiejszą datę
-   * */
+    public void borrowBook(Book book, Borrower borrower) {
+        Date date = new Date();
         try {
             if (book.getBookStatus().equals(BookStatus.AVAILABLE)) {
                 book.setBookStatus(BookStatus.BORROWED);
@@ -48,15 +40,8 @@ public class Library {
         }
     }
 
-    public void returnBook(Book book, Borrower borrower) { // this method returns a book to the library
- /* 1. Metoda będzie sprawdzać, czy data oddania książki nie przekroczyła 30 dni.
-    a) jeżeli przekroczyła, to czytelnik musi uiścić opłatę (nie mamy żadnej metody, która by liczyła ilość dni
-    od wypożyczenia książki i zmieniała status na DELAYED - jeżeli by tak było, to powyższa metoda nie sprawdzała
-    by ilości dni, ale tylko, czy status jest DELAYED czy BORROWED)
-    b) jeżeli nie przekroczyła, to status książki zmienia się na AVAILABLE oraz w pliku lending usuwany jest wpis o
-    wypożyczeniu.
-        */
-        Date borrowDate = date;
+    public void returnBook(Book book, Borrower borrower) {
+        Date borrowDate = new Date();
         Date returnDate = new Date();
         long overdueDays = (returnDate.getTime() - borrowDate.getTime()) / (1000 * 60 * 60 * 24); // obliczamy różnicę w dniach
 
@@ -69,27 +54,27 @@ public class Library {
         }
     }
 
-    public void getAvailableBooks() { // this method returns a list of available books
+    public void getAvailableBooks() {
         List<Book> allBooks = getAllBooks();
         List<Book> availableBooks = allBooks.stream()
                 .filter(book -> book.getBookStatus() == BookStatus.AVAILABLE)
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("Available Books:");
         availableBooks.forEach(book -> System.out.println(book.getTitle() + " by " + book.getAuthor()));
     }
 
-    public void getBorrowedBooks() { // this method returns a list of borrowed books
+    public void getBorrowedBooks() {
         List<Book> allBooks = getAllBooks();
         List<Book> borrowedBooks = allBooks.stream()
                 .filter(book -> book.getBookStatus() == BookStatus.BORROWED)
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("Borrowed Books:");
         borrowedBooks.forEach(book -> System.out.println(book.getTitle() + " by " + book.getAuthor()));
     }
 
-    public void getStatistics() { // this method returns the statistics data
+    public void getStatistics() {
 
     }
 
